src/style.css
:root {
    --bg-color: #0d1220;
    --window-color: #10222d;
    --font-color: #56c4d8;
    --shadow-font-color: #429babc3;
}

body {
    background-color: var(--bg-color);
    font-family: "Orbitron", sans-serif;
    font-variant: normal;
    font-style: normal;
    color: var(--font-color);
}

#imageArea {
    background-color: var(--window-color);
}

#app {
    transform: translateY(-130px);
}

.bracket-left{
    border-top: 2px solid var(--font-color);
    border-left: 2px solid var(--font-color);
    height: 40px;
    width: 40px

}

.bracket-right{
    border-top: 2px solid var(--font-color);
    border-right: 2px solid var(--font-color);
    height: 40px;
    width: 40px


}

@keyframes scan {
    0%{top:5%}
    50%{top:95%}
    100%{top:5%}
}

.scanline {
    height: 1px;
    width: 100%;
    position: absolute;
    background-color: var(--font-color);
    box-shadow: 0px 0px 5px 2px var(--shadow-font-color);
    animation: scan 5s linear infinite;

    
}

.scanline.paused{
    animation-play-state: paused;
    opacity: 0;
}

